--- a/example_app/example_app/templates/home.html
+++ b/example_app/example_app/templates/home.html
@@ -7,7 +7,7 @@
         <p class="lead">This is a simple example application which shows how the Nordeas Open Banking API can be used.</p>
         <hr class="my-4">
         <div class="alert alert-danger">
-            <p>Note that this is intented to be an example how you can use the API programmatically, <strong>do not use this in prodcution!</strong> There are many important missing features in this app, notably proper exception handling and lack of TLS.</p>
+            <p>Note that this is intented to be an example how you can use the API programmatically, <strong>do not use this in production!</strong> There are many important missing features in this app, notably proper exception handling and lack of TLS.</p>
         </div>
         <p>Use the navbar above to explore this toy app.</p>
         <p>For more information about the API, click the learn more below to get more information about the API</p>
